--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,24 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+# nanoGPT gitignore
+nanoGPT/.DS_Store
+nanoGPT/.idea/
+nanoGPT/.ipynb_checkpoints/
+nanoGPT/.vscode
+nanoGPT/__pycache__/
+nanoGPT/*.bin
+nanoGPT/*.pkl
+nanoGPT/*.pt
+nanoGPT/*.pyc
+nanoGPT/input.txt
+nanoGPT/env/
+nanoGPT/venv/
+
+
+
+
+
+
