--- a/.gitignore
+++ b/.gitignore
@@ -163,18 +163,14 @@ cython_debug/
 
 
 # nanoGPT gitignore
-nanoGPT/.DS_Store
-nanoGPT/.idea/
-nanoGPT/.ipynb_checkpoints/
-nanoGPT/.vscode
-nanoGPT/__pycache__/
-nanoGPT/*.bin
-nanoGPT/*.pkl
-nanoGPT/*.pt
-nanoGPT/*.pyc
-nanoGPT/input.txt
-nanoGPT/env/
-nanoGPT/venv/
+*.bin
+*.pk
+*.pyc
+*.pkl
+*.DS_STORE
+*.xml
+*.iml
+
 
 
 
